--- a/css/sif_discussion.css
+++ b/css/sif_discussion.css
@@ -40,7 +40,7 @@
 	color: #000000;
 	text-decoration: none;
 	background-color: #e8eee8;
-	border: 0px;
+	border: 0;
 	border-radius: 3px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
